@@ -1,1 +1,10 @@
 # CurView
+
+How to run from the command line:
+
+`java -jar CurView-0.0.1.jar --add-modules javafx.controls,javafx.fxml` 
+
+
+Graphical glitches? Try adding `-Dprism.forceGPU=true` as follows:
+
+`java -Dprism.forceGPU=true -jar CurView-0.0.1.jar --add-modules javafx.controls,javafx.fxml`
